--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "repository for backend cohort - Radium",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.12",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "redis": "^3.1.2"
   }
 }
