--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "radium",
+  "name": "uranium",
   "version": "1.0.0",
   "description": "repository for backend cohort - Radium",
   "main": "index.js",
