--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "radon",
+  "name": "plutonium",
   "version": "1.0.0",
-  "description": "repository for backend cohort - Radium",
+  "description": "repository for backend cohort - Plutonium",
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sabihak89/radium.git"
+    "url": "git+https://github.com/sabihak89/plutonium.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sabihak89/radium/issues"
+    "url": "https://github.com/sabihak89/plutonium/issues"
   },
-  "homepage": "https://github.com/sabihak89/radium#readme",
+  "homepage": "https://github.com/sabihak89/plutonium#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
